--- a/Exercise 2/02_Exercise.Rmd
+++ b/Exercise 2/02_Exercise.Rmd
@@ -469,6 +469,51 @@ $$
 $$
 where we have omitted the Normal proposal for $\beta^*$ because of the symmetry properties.
 
+```{r}
+# Samples from the posterior distribution using block McMC
+# data:     number of observations
+# t_1:      initial changepoint
+# lambda_0: initial rateparameter
+# lambda_1: initial rateparameter
+# beta:     initial hyperparameter
+# d1:       tuning parameter for the proposal distribution of t_1
+# d2:       tuning parameter for the proposal distribution of beta
+# n_iter:   number of iterations
+block_McMC_2 <- function(
+                  data, t_1, lambda_0, lambda_1, beta, d1 = 1, d2 = 1, n_iter = 5000
+                ) {
+  x <- data$date
+  y <- length(x)  # Number of disasters
+  t_0 <- x[1]     # Start date
+  t_2 <- x[y]     # End date
+  theta <- matrix(nrow = n_iter, ncol = 4,
+                  dimnames = list(NULL, c("t_1", "lambda_0", "lambda_1", "beta"))
+  )
+  theta[1, ] <- c(t_1, lambda_0, lambda_1, beta)
+  y_0 <- sum(x < t_1)  # Number of disasters before t_1
+  y_1 <- y - y_0       # Number of disasters after t_1
+  if (n_iter > 1) {
+    for (i in 2:n_iter) {
+      # Metropolis Hastings step, sample t_1
+      param <- MH_t1(t_1, lambda_0, lambda_1, t_0, t_2, x, y_0, y_1, y, d1)
+      t_1 <- param$t_1
+      y_0 <- param$y_0
+      y_1 <- param$y_1
+      
+      # Metropolis Hastings step, sample (beta, lambda_0, lambda_1)
+      param2 <- MH_beta_lamb1_lamb2(t_1, lambda_0, lambda_1, beta, y_0, y_1, t_0, t_2, d2)
+      beta <- param2$beta
+      lambda_0 <- param2$lambda_0
+      lambda_1 <- param2$lambda_1
+      
+      # Update
+      theta[i, ] <- c(t_1, lambda_0, lambda_1, beta)
+    }
+  }
+  as.data.frame(theta)
+}
+```
+
 
 
 
